Displaying game over now.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             enterButton.style.backgroundColor = "rgb(" + TileState.UNKNOWN.color + ")";
             enterButton.style.fontFamily = "arial, sans-serif";
             enterButton.style.fontSize = "xxx-large";
+            enterButton.style.height = "100px";
             enterButton.style.color = "white";
             enterCell.appendChild(enterButton);
             backspaceEnterRow.appendChild(enterCell);
