Displaying game over now.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             enterButton.style.fontFamily = "arial, sans-serif";
             enterButton.style.fontSize = "xxx-large";
             enterButton.style.height = "100px";
+            enterButton.style.width = "100px";
             enterButton.style.color = "white";
             enterCell.appendChild(enterButton);
             backspaceEnterRow.appendChild(enterCell);
