Trying to improve mobile appearance.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             playtrixCell = document.createElement('td');
             playtrixCell.style.backgroundColor = "rgb(" + tile.tileState.color + ")";
             playtrixCell.style.color = "white";
-            playtrixCell.style.fontSize = "xxx-large";
+            playtrixCell.style.fontSize = "70px";
             playtrixCell.innerHTML = tileLetter;
             playtrixRow.appendChild(playtrixCell);
         }
